--- a/source/index.html
+++ b/source/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Базис-КР</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__logo logo">
+            <a class="logo__link">
+                <picture>
+                    <source type="image/webp" srcset="img/Logo1.png 1x, img/Logo1@2x.png 2x">
+                    <img src="img/Logo1.png" alt="Логотип Базис-КР" srcset="img/Logo1@2x.png 2x" width="138" height="56">
+                </picture>
+            </a>
+        </div>
+    </header>
     <script src="js/script.min.js"></script>
 </body>
 </html>
