--- a/source/index.html
+++ b/source/index.html
@@ -17,6 +17,35 @@
                 </picture>
             </a>
         </div>
+        <nav class="header__nav nav">
+            <button class="nav__menu-button" type="button">Menu</button>
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Услуги</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Проекты</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">О компании</a>
+                </li>
+            </ul>
+            <div class="owner-info">
+                <div class="owner-info__avatar">
+                    <picture>
+                        <source type="image/webp" srcset="img/ 1x, img/ 2x">
+                        <img src="img/" alt="Цидуля Павел Александрович" srcset="img/ 2x" width="56" height="56">
+                    </picture>
+                </div>
+                <div class="owner-info__text">
+                    <p class="owner-info__name">Цидуля Павел Александрович</p>
+                    <p class="owner-info__phone">
+                        <span class="owner-info__post">Директор</span>
+                        <a href="tel:+380966185013" class="owner-info__phone">+38 096 618 50 13</a>
+                    </p>
+                </div>
+            </div>
+        </nav>  
     </header>
     <script src="js/script.min.js"></script>
 </body>
