--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,12 @@
             </a>
         </div>
         <nav class="header__nav nav">
-            <button class="nav__menu-button" type="button">Menu</button>
+            <button class="nav__menu-button" type="button">
+                <span class="visually-hidden">Menu</span>
+                <svg class="nav__menu-icn" width="16" height="16">
+                    <use xlink:href="img/sprite.svg#icn_Frame-2"></use>
+                </svg>
+            </button>
             <ul class="nav__list">
                 <li class="nav__item">
                     <a href="#" class="nav__link">Услуги</a>
@@ -41,12 +46,27 @@
                     <p class="owner-info__name">Цидуля Павел Александрович</p>
                     <p class="owner-info__phone">
                         <span class="owner-info__post">Директор</span>
-                        <a href="tel:+380966185013" class="owner-info__phone">+38 096 618 50 13</a>
+                        <a href="tel:+380966185013" class="owner-info__phone">
+                            <svg class="owner-info__phone-icn" width="16" height="16">
+                                <use xlink:href="img/sprite.svg#icn_Frame-2"></use>
+                            </svg>
+                            +38 096 618 50 13
+                        </a>
                     </p>
                 </div>
             </div>
         </nav>  
     </header>
     <script src="js/script.min.js"></script>
+    <script>
+        var svg = document.querySelector('.nav__menu-button').querySelector('use')
+        console.dir(svg);
+        Array.from(svg.attributes).forEach((it) => {
+            if (it.name  === 'xlink:href') {
+                it.nodeValue = 'img/sprite.svg#icn_Frame-1'
+            }
+        })
+        console.log(svg);
+    </script>
 </body>
 </html>
