--- a/source/index.html
+++ b/source/index.html
@@ -63,7 +63,7 @@
         <section class="main__section welcome-section">
             <div class="welcome-section__wrapper">
                 <h1 class="welcome-section__title title title--main">
-                    <span class="main-title__company-name">Базис-КР</span>
+                    <span class="title__company-name">Базис-КР</span>
                     Разработка проектной документации объектов
                     span.
                     <span class="orange">гражданского и промышленного</span>
@@ -109,15 +109,15 @@
                             <ul class="tab__features-list">
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title">Разработка градостроительной документации.</h4>
-                                    <p class="item__description">Выполнение проектов генеральных планов населенных пунктов, землеустройства по изменению границ населенного пункта, отвода земельного участка любого целевого назначения (или его изменения), детальной планировки територий, нормативной денежной оценки земель населенного пункта и других документов в сфере градостроения согласно ДБН Б.1.1-15 2012.</p>
+                                    <p class="tab__item-description">Выполнение проектов генеральных планов населенных пунктов, землеустройства по изменению границ населенного пункта, отвода земельного участка любого целевого назначения (или его изменения), детальной планировки територий, нормативной денежной оценки земель населенного пункта и других документов в сфере градостроения согласно ДБН Б.1.1-15 2012.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title"></h4>
-                                    <p class="item__description">Разработка архитектурно-строительных чертежей, железобетонных и металлических конструкций объектов строительства</p>
+                                    <p class="tab__item-description">Разработка архитектурно-строительных чертежей, железобетонных и металлических конструкций объектов строительства</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title">Проведение авторского надзора за строительством.</h4>
-                                    <p class="item__description"></p>
+                                    <p class="tab__item-description"></p>
                                 </li>
                             </ul>
                         </li>
@@ -126,27 +126,27 @@
                             <ul class="tab__features-list">
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title">Внутренние системы водоснабжения</h4>
-                                    <p class="item__description">Проектирование внутренних систем холодного и горячего водоснабжения, канализаций и водостока согласно ДБН В.2.5-64: 2012.</p>
+                                    <p class="tab__item-description">Проектирование внутренних систем холодного и горячего водоснабжения, канализаций и водостока согласно ДБН В.2.5-64: 2012.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title">Внешние сети водоснабжения</h4>
-                                    <p class="item__description">Проектирование внешних сетей водоснабжения: хозяйственно-питьевого, противопожарного и технического (оборотное водоснабжение), насосные станции и  станции водоочистки согласно с ДБН В.2.5-74: 2013</p>
+                                    <p class="tab__item-description">Проектирование внешних сетей водоснабжения: хозяйственно-питьевого, противопожарного и технического (оборотное водоснабжение), насосные станции и  станции водоочистки согласно с ДБН В.2.5-74: 2013</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title">Внешние сети водоотведения (канализаций):</h4>
-                                    <p class="item__description">Проектирование внешних сетей водоотведения (канализаций): хозяйственно-бытовых, производственных и ливневых стоков, канализационные насосные станции  и станции очистки стоков согласно ДБН В.2.5-75: 2013.</p>
+                                    <p class="tab__item-description">Проектирование внешних сетей водоотведения (канализаций): хозяйственно-бытовых, производственных и ливневых стоков, канализационные насосные станции  и станции очистки стоков согласно ДБН В.2.5-75: 2013.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title">Тепловые сети</h4>
-                                    <p class="item__description">Проектирование тепловых сетей: теплоснабжение зданий и сооружений, тепловые пункты, котельные, теплогенераторные на газоподобном и твердом топливе согласно с ДБН В.2.5-39: 2008, ДБН В.2.5-20: 2001.</p>
+                                    <p class="tab__item-description">Проектирование тепловых сетей: теплоснабжение зданий и сооружений, тепловые пункты, котельные, теплогенераторные на газоподобном и твердом топливе согласно с ДБН В.2.5-39: 2008, ДБН В.2.5-20: 2001.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title">Внешние и внутренние системы газоснабжения</h4>
-                                    <p class="item__description">Проектирование внешних и внутренних систем газоснабжения высокого, среднего и низкого давлений: наружное газоснабжение населенных пунктов (улиц, поселков) промышленных предприятий, площадок, проектирование узлов учета природного газа, газорегуляторных пунктов (ГРП / ШГРП), способов дистанционной передачи данных, проектирование систем внутреннего газоснабжения согласно с ДБН-В.2.5-20: 2001, НПАОП 0.00-1.76-15.</p>
+                                    <p class="tab__item-description">Проектирование внешних и внутренних систем газоснабжения высокого, среднего и низкого давлений: наружное газоснабжение населенных пунктов (улиц, поселков) промышленных предприятий, площадок, проектирование узлов учета природного газа, газорегуляторных пунктов (ГРП / ШГРП), способов дистанционной передачи данных, проектирование систем внутреннего газоснабжения согласно с ДБН-В.2.5-20: 2001, НПАОП 0.00-1.76-15.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title">Электротехнические системы</h4>
-                                    <p class="item__description">Проектирование электротехнических систем зданий и сооружений, автоматизация (АСУ ТП, КВП), электрическое освещение, силовое электрооборудование, электроснабжение технологического оборудования зданий и сооружений.</p>
+                                    <p class="tab__item-description">Проектирование электротехнических систем зданий и сооружений, автоматизация (АСУ ТП, КВП), электрическое освещение, силовое электрооборудование, электроснабжение технологического оборудования зданий и сооружений.</p>
                                 </li>
                             </ul>
                         </li>
@@ -155,27 +155,27 @@
                             <ul class="tab__features-list">
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title"></h4>
-                                    <p class="item__description">Проектирование молниезащиты зданий и сооружений согласно ДСТУ Б В.2.5-38: 2008.</p>
+                                    <p class="tab__item-description">Проектирование молниезащиты зданий и сооружений согласно ДСТУ Б В.2.5-38: 2008.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title"></h4>
-                                    <p class="item__description">Проектирование систем пожарной сигнализации и оповещения о пожаре.</p>
+                                    <p class="tab__item-description">Проектирование систем пожарной сигнализации и оповещения о пожаре.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title"></h4>
-                                    <p class="item__description">Проектирование мероприятий по защите подземных инженерних систем от электрохимической коррозии: станции катодной защиты, протекторная защита.</p>
+                                    <p class="tab__item-description">Проектирование мероприятий по защите подземных инженерних систем от электрохимической коррозии: станции катодной защиты, протекторная защита.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title"></h4>
-                                    <p class="item__description">Проектирование и оценка влияния на окружающую среду (ОВОС).</p>
+                                    <p class="tab__item-description">Проектирование и оценка влияния на окружающую среду (ОВОС).</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title"></h4>
-                                    <p class="item__description">Разработка энергетического паспорта зданий  согласно ДБН В.2.6-31: 2016.</p>
+                                    <p class="tab__item-description">Разработка энергетического паспорта зданий  согласно ДБН В.2.6-31: 2016.</p>
                                 </li>
                                 <li class="tab__features-item">
                                     <h4 class="tab__item-title"></h4>
-                                    <p class="item__description">Проведение идентификации объектов повышенной опасности согласно с законом Украины "Про объекты повышенной опасности".</p>
+                                    <p class="tab__item-description">Проведение идентификации объектов повышенной опасности согласно с законом Украины "Про объекты повышенной опасности".</p>
                                 </li>
                             </ul>
                         </li>        
@@ -482,11 +482,11 @@
                         </a>
                     </p>
                 </div>
+                <button class="owner-info__submit-button button-blue" type="submit">Оставить заявку</button>
+                <p class="owner-info__confidence-policy confidence-policy">
+                    Нажимая на кнопку, вы соглашаетесь с <a href="#" class="confidence-policy__link">Политикой конфиденциальности</a>
+                </p>
             </div>
-            <button class="owner-info__submit-button button-blue" type="submit">Оставить заявку</button>
-            <p class="owner-info__confidence-policy confidence-policy">
-                Нажимая на кнопку, вы соглашаетесь с <a href="#" class="confidence-policy__link">Политикой конфиденциальности</a>
-            </p>
         </div>
     </footer>
     <script src="js/script.min.js"></script>
