--- a/source/index.html
+++ b/source/index.html
@@ -70,9 +70,9 @@
                     назначения
                 </h1>
                 <form action="#" method="POST" class="welcome-section__contact-form contact-form">
-                    <legend class="contact-form__legend">Нужна проектная документация без головной боли?
+                    <p class="contact-form__legend">Нужна проектная документация без головной боли?
                         <span class="contact-form__legend">Оставьте заявку</span>
-                    </legend>
+                    </p>
                     <input class="contact-form__input" type="text" name="name" id="name" placeholder="Ваше имя">
                     <input class="contact-form__input" type="tel" name="tel" id="tel" placeholder="Телефон">
                     <button class="contact-form__submit-button button-blue" type="submit">Оставить заявку</button>
@@ -439,13 +439,13 @@
                     <p class="tel-block__footer">Оставьте заявку, и наш менеджер свяжется с вами в ближайшее время</p>
                 </div>
                 <form action="#" method="POST" class="contact-popup__contact-form contact-form">
-                    <legend class="contact-form__legend">Нужна проектная документация без головной боли?
+                    <p class="contact-form__legend">Нужна проектная документация без головной боли?
                         <span class="contact-form__legend">Оставьте заявку</span>
-                    </legend>
-                    <input class="contact-form__input" type="text" name="name" id="name" placeholder="Ваше имя">
-                    <input class="contact-form__input" type="tel" name="tel" id="tel" placeholder="Телефон">
-                    <input class="contact-form__input" type="email" name="email" id="email" placeholder="E-mail">
-                    <textarea name="message" id="message" cols="25" rows="1" placeholder="Ваше сообщение"></textarea>
+                    </p>
+                    <input class="contact-form__input" type="text" name="name" id="full-form-name" placeholder="Ваше имя">
+                    <input class="contact-form__input" type="tel" name="tel" id="full-form-tel" placeholder="Телефон">
+                    <input class="contact-form__input" type="email" name="email" id="full-form-email" placeholder="E-mail">
+                    <textarea name="message" id="full-form-message" cols="25" rows="1" placeholder="Ваше сообщение"></textarea>
                     <button class="contact-form__submit-button button-blue" type="submit">Оставить заявку</button>
                     <p class="contact-form__confidence-policy confidence-policy">
                         Нажимая на кнопку, вы соглашаетесь с <a href="#" class="confidence-policy__link">Политикой конфиденциальности</a>
