Styled main title

--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,6 @@
                         </p>
                     </div>
                 </div>
-                <div class="nav__background">   </div>
             </nav>  
         </div>
     </header>
@@ -69,7 +68,6 @@
                 <h1 class="welcome-section__title title title--main">
                     <span class="title__company-name">Базис-КР</span>
                     Разработка проектной документации объектов
-                    span.
                     <span class="orange">гражданского и промышленного</span>
                     назначения
                 </h1>
@@ -487,9 +485,9 @@
                     </p>
                 </div>
                 <button class="owner-info__submit-button button-blue" type="submit">Оставить заявку</button>
-                <p class="owner-info__confidence-policy confidence-policy">
+                <!-- <p class="owner-info__confidence-policy confidence-policy">
                     Нажимая на кнопку, вы соглашаетесь с <a href="#" class="confidence-policy__link">Политикой конфиденциальности</a>
-                </p>
+                </p> -->
             </div>
         </div>
     </footer>
