added welcome part styling

--- a/source/index.html
+++ b/source/index.html
@@ -73,13 +73,13 @@
                 </h1>
                 <form action="#" method="POST" class="welcome-section__contact-form contact-form">
                     <p class="contact-form__legend">Нужна проектная документация без головной боли?
-                        <span class="contact-form__legend">Оставьте заявку</span>
+                        <span class="contact-form__legend-bold">Оставьте заявку</span>
                     </p>
                     <input class="contact-form__input" type="text" name="name" id="name" placeholder="Ваше имя">
                     <input class="contact-form__input" type="tel" name="tel" id="tel" placeholder="Телефон">
                     <button class="contact-form__submit-button button-blue" type="submit">Оставить заявку</button>
                     <p class="contact-form__confidence-policy confidence-policy">
-                        Нажимая на кнопку, вы соглашаетесь с <a href="#" class="confidence-policy__link">Политикой конфиденциальности</a>
+                        Нажимая на кнопку, вы соглашаетесь <br> с <a href="#" class="confidence-policy__link">Политикой конфиденциальности</a>
                     </p>
                 </form>
             </div>
