--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,10 @@
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Базис-КР</title>
     <link rel="stylesheet" href="css/style.min.css">
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
-    <header class="header">
+    <header id="navigation" class="header">
         <div class="header__wrapper">
             <div class="header__logo logo">
                 <a href="/" class="logo__link">
@@ -18,16 +19,16 @@
                     </picture>
                 </a>
             </div>
-            <button class="header__menu-button" type="button">
+            <button class="header__menu-button" v-on:click="toggleMobileMenu" type="button">
                 <span class="visually-hidden">Menu</span>
-                <svg class="header__menu-icn header__menu-icn--hidden" width="16" height="16">
+                <svg class="header__menu-icn " :class="{ 'header__menu-icn--hidden':  isMenuOpen }" width="16" height="16">
                     <use xlink:href="img/sprite.svg#icn_Group1"></use>
                 </svg>
-                <svg class="header__menu-icn" width="24" height="24">
+                <svg class="header__menu-icn" :class="{ 'header__menu-icn--hidden':  !isMenuOpen }" width="24" height="24">
                     <use xlink:href="img/sprite.svg#icn_Frame-1"></use>
                 </svg>
             </button>
-            <nav class="header__nav nav nav--visible">
+            <nav class="header__nav nav" :class="{ 'nav--visible':  isMenuOpen }">
                 <ul class="nav__list">
                     <li class="nav__item">
                         <a href="#" class="nav__link">Услуги</a>
